--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			.background1 {
 				width: 1280px;
 				height: 720px;
-				background-image: url("/antifraud/img/img1/bj.png");
+				background-image: url("img/img1/bj.png");
 				background-size: 100% 100%;
 				margin: 0 auto;
 				animation: action1 1s linear ;
