--- a/zskp1.html
+++ b/zskp1.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<meta charset="utf-8" />
-		<title>大学生防诈骗</title>
+		<meta charset="UTF-8">
+		<title>知识科普1</title>
 		<style>
-			
-			body{
+	body{
 			display: flex;
 			justify-content: center;
 			align-items: center;
