--- a/index-case.html
+++ b/index-case.html
@@ -9,7 +9,7 @@
 			display: flex;
 			justify-content: center;
 			align-items: center;
-			background: url("img/img1/bg1.png") center no-repeat;
+			background: url("img/img1/bj.png") center no-repeat;
 			background-size: 100%;
 			background-attachment: fixed;			
 		}
@@ -34,6 +34,7 @@
 			75%{opacity: 0.8}
 			100%{opacity:1}
 		}
+		
 			
 			/*.background1 div {
 				position: relative;
@@ -74,13 +75,13 @@
 			
 			100%{left:700px;opacity:1}
 		}
+			
 			.tip{
 				position:absolute; 
 				left: 80px;
 				top:680px;
 			}
-		
-			/*.tips div{
+			.tip div{
 			    width: 100%;
 			    height: 70px;
 			   text-align：center;
@@ -88,7 +89,17 @@
 			    border-radius: 40px;
 			    position: relative;
 			    margin: 0 auto;
-			}*/
+			}
+			.return{
+				position:absolute;
+				left:-200px;
+				animation: notice 2s ease infinite;
+			}
+			@keyframes notice{
+			0%{opacity:0.5}
+			100%{opacity:1}
+		}
+		
 			/* .*{
     margin: 0;
     padding: 0;
@@ -126,20 +137,19 @@
 				top:200px;
 				cursor: pointer;
 				
-			}
+			}*/
 		
 			
 			
 	
-			img.entercase:hover{
-            	transform: scale(1.1);
+			img.case1:hover{
+            	transform: scale(1.05);
+        	}img.case2:hover{
+            	transform: scale(1.05);
+        	}img.case3:hover{
+            	transform:  scale(1.05);
         	}
-        	img.enterknow:hover{
-            	transform: scale(1.1);
-        	}
-			img.enterquiz:hover{
-			    transform: scale(1.1);
-			}<div class="tip">
+        	/*<div class="tip">
 				<div class="txt">点击人物揭晓“TA”可能的真面目</div>
 			</div>*/
 		</style>
@@ -154,14 +164,15 @@
 	<body>
 		<div class="main">
 			
+		<a href="index.html"><div class="return"><img src="img/ img3/return.png"></div></a>
 				<div class="lines">
-			        <a href="index-case1.html"><div><img src="img/ img3/case1.png" /></div></a>
-			        <a href="index-case3.html"><div><img src="img/ img3/case3.png" /></div></a>
-			        <a href="index-case2.html"><div><img src="img/ img3/case2.png" /></div></a>
+			        <a href="index-case1.html"><div><img class="case1" src="img/ img3/case1.png" /></div></a>
+			        <a href="index-case3.html"><div><img class="case3" src="img/ img3/case3.png" /></div></a>
+			        <a href="index-case2.html"><div><img class="case2" src="img/ img3/case2.png" /></div></a>
 			      </div>
 		<div class="talk"><img src="img/ img3/talk.png"></div>
 		<div class="tip"><img src="img/ img3/tip.png"></div>
-		
+	
 		</div>
 	</body>
 </html>
