--- a/index-youxi.html
+++ b/index-youxi.html
@@ -50,7 +50,7 @@
 
 			<div align="center" class="image1"><img src="img/img2/yxjm.png" /></div>
 			
-<a href="ManDown100/WebContent/index.html"><img class="image2" src="img/img2/ks.png"/></a>
+<a href="ManDown100/WebContent/index.html"><img class="image2" src="img/img2/KS.png"/></a>
 		
 	</body>
 
