--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 			
 				<a href="index-case.html"><img class="entercase" src="img/img1/entercase.png"/></a>
 				<a href="index-youxi.html"><img class="enterknow" src="img/img1/enterknow.png"/></a>	
-				<a href="index-quiz.html"><img class="enterquiz" src="img/img1/enterquiz.png"/></a>
+				<a href="index-quiz1.html"><img class="enterquiz" src="img/img1/enterquiz.png"/></a>
 		
 			
 			
